# ai-accountability-buddy

./: .gitignore  README.md  agent.py  habitify_auth.py  habitify_briefing.py  livekit.toml  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-core-voice-agent/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-twilio-sip-telephony/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-habitify-integration/: .continue-here.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md
.planning/research/: SUMMARY.md  habitify-mcp.md  livekit-openai.md  scheduling-deployment.md  twilio-telephony.md
scripts/: habitify_oauth_setup.py
