[project]
name = "accountability-buddy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "livekit-agents[openai]~=1.4",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit>=1.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
